--- a/_posts/2019-07-11-the-us-narrative-today.html
+++ b/_posts/2019-07-11-the-us-narrative-today.html
@@ -2691,107 +2691,107 @@ stories:
   domain: http://www.elkharttruth.com/
   link: https://www.elkharttruth.com/online_features/education/the-test-every-kid-needs-before-going-back-to-school/article_d599e354-3cbd-503b-8397-551ae32a2261.html
 images:
-- name: sand-hand-sand-hand-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-deep-connections.jpg
-- name: ellis-island-ellisisland-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-dark-soul.jpg
-- name: birdhouse-birdhouse-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-purple-storm.jpg
-- name: gypsy-wagon-gypsywagon-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-constitution.jpg
-- name: window-window-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-sand-paper.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-clean-view.jpg
-- name: mediterranean-mediterranean-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-internet-numbers.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-yellow-paper.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-really-hot.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-really-hot.JPG
-- name: dragon-desert-desert-dragon-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-blue-circuit-5.jpg
-- name: eduardo-eduardo-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-dali-three.jpg
-- name: school-clouds-church-clouds-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-gred-mash.jpg
-- name: catacombs-catacombs-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-matrix.jpg
-- name: dc-statue-dcstatue-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-dark-soul.jpg
-- name: curtain-curtain-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-smoking-cigarette.jpg
-- name: old-church-oldchurch-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-smoking-cigarette.jpg
-- name: cargo-ship-cargo-ship-on-sea-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-colorful-dream.jpg
-- name: stories-new-65-144-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-65-144-800-500-0-max-0-1--1.jpg
-- name: abe_lincoln_one-oily_mcoilface-file-00_00_07_91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe_lincoln_one-oily_mcoilface-file-00_00_07_91.jpg
-- name: supreme-court-supremecourt-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-ww2-dresden.jpg
-- name: capital-battle-capitolbattle-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dark-dali.jpg
-- name: dragon-desert-desert-dragon-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-gred-mash.jpg
-- name: yosemite-yosemite-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-ww2-dresden.jpg
-- name: locked-up-steam-lock-up-steam-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-kandinsky-bv.jpg
-- name: yuma-bank-yuma-bak-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-alien-goggles.jpg
-- name: oldhouse-granaryfield-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-atari-missle.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-colorful-blocks.jpg
-- name: old-granary-field-oldhouse-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-graham-sutherland.jpg
-- name: statue-of-liberty-front-view-statueofliberty-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-matrix.jpg
-- name: old-door-lock-old-door-lock-2-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-feed-people.jpg
-- name: old-school-house-old-schoolhouse-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-oily-mcoilface.jpg
-- name: machine-road-machine-road-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-constitution.jpg
-- name: aws-s3-desertrun-desertrun-still-600.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-desertrun-desertrun-still-600.jpg
-- name: meadowbutterfly-meadow-butterfly-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-internet-numbers.jpg
-- name: sand-hand-sand-hand-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-bright-sand.jpg
-- name: mistywoods-babyfoot-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-kandinsky-bv.jpg
-- name: mediterranean-mediterranean-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-colored-circuits.jpg
-- name: blossombar-far-away-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-far-away-file-00-00-00-00.jpg
-- name: dc-statue-dcstatue-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-plentiful.jpg
-- name: gears-4882162452-fa3126b38d-b-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-blue-circuit.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-alberto-giacometti.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-alberto-giacometti.png
-- name: lincoln-memorial-lincolnmemorial-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-propaganda-leaflets.jpg
-- name: death-valley-death-valley-national-park-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-monet-one.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-neo-instinct.jpg
-- name: walled-garden-walled-garden-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-crabapple.jpg
-- name: san-francisco-street-view-san-francisco-street-view-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-umberto-bocc.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-colored-circuits.jpg
-- name: trucksilo-trucksilo-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-marcel-duchamp.jpg
-- name: berlinwall2-berlinwall-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-mucha-mult.jpg
-- name: server-cloud-server-racks-clouds-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-light-dali.jpg
-- name: server-cloud-server-racks-door-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-gred-mash.jpg
+- name: old-cabin-oldcabin-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-hot-spicy.jpg
+- name: sand-hand-sand-hand-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-rainbow-festival.jpg
+- name: border-crossing-bordercrossing-clean-view.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-clean-view.png
+- name: stories-new-old-door-lock-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-old-door-lock-smoking-cigarette.jpg
+- name: oldhouse-oldhouse-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-post-modern.jpg
+- name: birdhouse-birdhouse-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-sand-paper.jpg
+- name: school-clouds-church-clouds-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-plentiful.jpg
+- name: gypsy-wagon-gypsywagon-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-gred-mash.jpg
+- name: abandonedbuildings_rainbow_festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_rainbow_festival.jpg
+- name: supreme-court-supremecourt-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-spagetti-accident.jpg
+- name: amusement-park-amusement-park-2-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-ww2-dresden.jpg
+- name: power-lines-power-lines-empty-space-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-emily-carr.jpg
+- name: old-school-house-old-schoolhouse-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-umberto-bocc.jpg
+- name: oldbarn-oldbarn-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-space-pizza.jpg
+- name: razorwire-DSC-0080-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-atari-asteroids.jpg
+- name: udnie-concert-hall.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-concert-hall.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-sand-paper.jpg
+- name: beach-rocks-beach-rocks-currents-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-brush.jpg
+- name: birdhouse-birdhouse-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-creativity.jpg
+- name: stories-statue-face-open-mouth-colorful-blocks.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-statue-face-open-mouth-colorful-blocks.png
+- name: razorcliff-razorcliff-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-atari-asteroids.jpg
+- name: death-valley-death-valley-national-park-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-green-zuma.jpg
+- name: white-house-lawn-white-house-window-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-neo-instinct.jpg
+- name: gypsy-wagon-gypsywagon-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-dali-two.jpg
+- name: abe-lincoln-one-satan-red-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-satan-red-file-00-00-15-87.jpg
+- name: amusement-park-amusement-park-2-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-colored-circuits.jpg
+- name: oldhousecars-house-old-cars-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-dali-three.jpg
+- name: server-cloud-server-racks-door-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-granite.jpg
+- name: blossombar-bright-sand-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-bright-sand-file-00-00-24-99.jpg
+- name: old-school-house-old-schoolhouse-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-post-modern.jpg
+- name: beach-rocks-beach-rocks-currents-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-yellow-paper.jpg
+- name: old-granary-field-oldhouse-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-dali-two.jpg
+- name: mosaic-face-mosaic-face-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-kand-two.jpg
+- name: white-house-whitehouse-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-alberto-giacometti.jpg
+- name: miamibeach-miamibeach-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-atari-missle.jpg
+- name: fence-fence-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-constitution.jpg
+- name: crow_emily_carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_emily_carr.jpg
+- name: store-on-corner-store-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-atari-missle.jpg
+- name: old-church-oldchurch-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dali-two.jpg
+- name: aws-s3-stories-4882162452-fa3126b38d-b-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-4882162452-fa3126b38d-b-spagetti-accident.jpg
+- name: san-francisco-street-view-san-francisco-street-view-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-purp-paper.jpg
+- name: machine-road-machine-road-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-really-hot.jpg
+- name: power-lines-power-lines-empty-space-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-gan-vogh.jpg
+- name: stories-copper-servers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-copper-servers.jpg
+- name: aws-s3-stories-containership-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-containership-deep-connections.jpg
+- name: ellis-island-ellis-island-room-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-smoking-cigarette.jpg
+- name: mosaic-face-mosaic-face-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-aqua.jpg
+- name: border-fence-border-fence-on-hill-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-constitution.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-feed-people.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-far-away.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-dark-dali.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dark-dali.png
 ---
 Board Members Cautioned For Interfering.&nbsp;Park City Police Told Of People Swarming Around Moose On Town Bridge.&nbsp;Fife Lake Roundabout Construction To Enter Final Stage.&nbsp;Madison Fair Livestock Judging.&nbsp;Winning Numbers Drawn In 'Lotto' Game.&nbsp;Resource Fair Helps Those Displaced From Clarksville Motel.&nbsp;Hamburger And Hotdog Buns Recalled.&nbsp;The Warren Group Expanding Reach With Addition Of National Data.&nbsp;
